--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
